# HagridBot

./: .gitignore  .gitmodules  Dockerfile  README.md  compose.yml  config.py  data.py  experimental.py  grumpy.py  hagrid.py  library.py  main.py  openai_utils.py  pyproject.toml  requirements-rt.txt  requirements.txt  role_sync.py  smart_hagrid.py  virtual_hagrid.py
app/: config.py  data.py  llm_utils.py  main.py  openai_utils.py  stats.py  storage.py
app/modules/: config.py  crosspost.py  paint.py  ranks.py  sirben.py  smart_hagrid.py  talk.py
common/: config.py  openai_utils.py  stats.py  utils.py  whisper_online.py  whisper_sentencer.py
modules/: config.py  hagrid.py  library.py  paint.py  role_sync.py  smart_hagrid.py
modules/virtual_hagrid/: talker.py  thinker.py  todo.md  transcriber.py
