[tool.poetry]
name = "hagridbot"
version = "0.1.0"
description = ""
authors = ["Luke100000"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.3.2"
asyncio = "^3.4.3"
python-dotenv = "^1.0.1"
numpy = "^1.26.4"
openai = "^1.34.0"
tiktoken = "^0.7.0"
async-cache = "^1.1.1"
cachetools = "^5.3.3"
librosa = "^0.10.2.post1"
soundfile = "^0.12.1"
setuptools = "^70.0.0"
pillow = "^10.3.0"
horde-sdk = "^0.11.1"
discord-ext-listening = {git = "https://github.com/Sheppsu/discord-ext-listening"}
pynacl = "^1.5.0"
langchain = "^0.2.5"
langchain-groq = "^0.1.5"
faster-whisper = "^1.0.2"
mosestokenizer = "^1.2.1"
wtpsplit = "^1.3.0"
whisper-timestamped = "^1.15.4"
tokenize-uk = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"