[project]
name = "hagridbot"
version = "0.1.0"
description = "A Discord bot."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "async-cache>=1.1.1",
    "asyncio>=4.0.0",
    "cachetools>=6.2.0",
    "discord>=2.3.2",
    "horde-sdk>=0.17.1",
    "numpy>=2.2.6",
    "openai>=2.2.0",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.12.0",
]
